<resources>
    <string name="app_name">Hamro Share</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="hamro_share">Hamro share</string>
    <string name="hamro">HAMR</string>
    <string name="share">SHARE</string>

    <string name="tv_first_description">Share market is a platform where investors buy and sell shares of publicly traded companies.</string>
    <string name="tv_second_description">To invest in the growth potential of businesses and potentially earn profits.</string>
    <string name="tv_third_description">Share prices are determined by demand and supply, economic, performance, and investor sentiment.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="depository_participants">Depository Participants</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="bank_name">Bank Name</string>
    <string name="remember_login_id">Remember Login ID</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_your">Forgot your</string>
    <string name="passwords">Password?</string>
    <string name="_2023_cds_and_hamro_share_ltd">2023 CDS and Hamro Share Ltd.</string>
    <string name="nepal_stock_market">Nepal Stock Market</string>
    <string name="agricultural_bank_limited">Agricultural Bank Limited</string>
    <string name="textview">textView</string>
    <string name="select_bank">Select Bank</string>
    <string name="nepal_bank_limited">Nepal Bank limited</string>
    <string name="register_details">Register Details</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_now">Register now</string>
    <string name="not_a_member">Not a member?</string>

    // dropdown bank names
    <string-array name="bank_name">
        <item>Agricultural Development Bank Ltd</item>
        <item>Citizens Bank Limited</item>
        <item>Everest Bank Limited</item>
        <item>Global IME Bank Limited</item>
        <item>Jyoti Bikash Bank Limited</item>
        <item>Kamana Sewa Biksah Bank Limited</item>
        <item>Krishi Biskash Bank Limited</item>
        <item>Kumari Bank Limited</item>
        <item>Laxmi Bank Limited</item>
        <item>Machhapuchchhre Bank Limited</item>
        <item>Mahalaxmi Bank Limited</item>
        <item>Nabil Bank Limited</item>
        <item>Nepal Bank Limited</item>
        <item>Nepal SBI Bank Limited</item>
        <item>NIC Asia Limited</item>
        <item>Prabhu Bank Limited</item>
        <item>Prime Commercial SBI Bank Ltd</item>
        <item>Sanima Bank Limited</item>
    </string-array>
</resources>