<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E0A6E"
    tools:context=".features.login.LoginActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">

        <TextView
            android:id="@+id/tvAppFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hamro"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@null" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvAppLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/share"
            android:textAlignment="center"
            android:textColor="@color/redColor"
            android:textSize="25sp"
            android:textStyle="italic" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#42237C"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/depository_participants"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="style/widget.MaterialComponents.TextInputLayout.OutLinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:hint="@string/bank_name"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/active"
                app:boxStrokeColor="#4E4A4A"
                app:boxStrokeWidth="1dp"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTextBank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/active"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="style/widget.MaterialComponents.TextInputLayout.OutLinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:hint="@string/username"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/active"
                app:boxStrokeColor="#4E4A4A"
                app:boxStrokeWidth="1dp"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@color/active"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="style/widget.MaterialComponents.TextInputLayout.OutLinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:hint="@string/password"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:boxStrokeColor="#4E4A4A"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTextPasswords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/btnCheckBok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/remember_login_id"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/redColor"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_your"
                    android:textColor="@color/white"
                    android:layout_marginEnd="5dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwords"
                    android:textColor="@color/redColor"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:layout_marginBottom="40dp"-->
<!--                android:text="@string/forgot_your_password"-->
<!--                android:textColor="@color/white"-->
<!--                android:textStyle="bold" />-->

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="118dp"
        android:text="2023 CDS and Hamro Share Ltd. "
        android:textAlignment="center"
        android:layout_margin="30dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>