<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.splash.SliderActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/sliderViewPager"
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvSliderSkip"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FA000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSliderBack"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FA000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSliderNext"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FA000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/indicator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>